@startuml
'https://plantuml.com/class-diagram
'___________STYLES___________
title UML - Sistema para el control de calidad
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________

package model {
class Articulo {
- nombre: String
- lote: int
- peso: int
- envasado: String
+ Articulo(String nombre, int lote, int peso, String envasado)
+ getNombre(): String
+ setNombre(String nombre)
+ getLote(): int
+ setLote(int lote)
+ getPeso(): int
+ setPeso(int peso)
+ getEnvasado(): String
+ setEnvasado(String envasado)
+ toString()
}

enum Parametro {
LOTE(1000, 2000)
PESO(1200, 1300)
- int limiteInferior
- int limiteSuperior
+ Parametro(int limiteInferior, int limiteSuperior)
+ getLimiteInferior(): int
+ getLimiteSuperior(): int
}
}

package service {
abstract ManejadorDeCalidad {
- nombre: String
- manejadorCalidadSiguiente: ManejadorDeCalidad
+ ManejadorDeCalidad(String nombre)
+ {abstract}comprobarCalidad(Articulo articulo): String
+ getNombre(): String
+ setNombre(String nombre)
+ getManejadorCalidadSiguiente(): ManejadorDeCalidad
+ setManejadorCalidadSiguiente(ManejadorDeCalidad manejadorCalidadSiguiente)
}

class ManejadorDeCalidadPorLote {
+ ManejadorDeCalidadPorLote(String nombre)
+ comprobarCalidad(Articulo articulo))
}

class ManejadorDeCalidadPorPeso {
+ ManejadorDeCalidadPorLote(String nombre)
+ comprobarCalidad(Articulo articulo))
}

class ManejadorDeCalidadPorEnvasado {
+ ManejadorDeCalidadPorLote(String nombre)
+ comprobarCalidad(Articulo articulo))
}

class CadenaDeManejadores {
- manejadorBase: ManejadorDeCalidad
+ CadenaDeManejadores()
+ getManejadorBase(): ManejadorDeCalidad
+ setManejadorBase(ManejadorDeCalidad manejadorBase)
}

}

model <.. service
Articulo .> Parametro
ManejadorDeCalidad <- ManejadorDeCalidad
CadenaDeManejadores .> ManejadorDeCalidad
ManejadorDeCalidad <|-- ManejadorDeCalidadPorLote
ManejadorDeCalidad <|-- ManejadorDeCalidadPorPeso
ManejadorDeCalidad <|-- ManejadorDeCalidadPorEnvasado

@enduml